# bkmonitor-ecosystem

./: AGENTS.md
docs/open/common/examples/: helloworld.md
docs/open/cookbook/: README.md
docs/open/cookbook/Quickstarts/events/http/: README.md  bkmonitorbeat.md  cpp.md  curl.md  go.md  java.md  python.md
docs/open/cookbook/Quickstarts/logs/http/: README.md  python.md
docs/open/cookbook/Quickstarts/metrics/http/: README.md  cpp.md  curl.md  go.md  java.md  python.md
docs/open/cookbook/Quickstarts/metrics/sdks/: README.md  cpp.md  go.md  java.md  python.md
docs/open/cookbook/Term/metrics/: type.md  what.md
docs/open/go/otlp/: README.md
docs/open/js/otlp/: README.md
docs/open/rust/otlp/: README.md
examples/go-examples/helloworld/service/http/: helloworld.go
examples/js-examples/helloworld/: package-lock.json  package.json
examples/logs/http/python/: Dockerfile
examples/logs/http/python/src/: main.py
examples/metrics/http/cpp/: main.cpp
examples/rust-examples/helloworld/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
examples/rust-examples/helloworld/src/: config.rs  lib.rs  main.rs
examples/rust-examples/helloworld/src/http/: client.rs  mod.rs  server.rs
examples/rust-examples/helloworld/src/telemetry/: logs.rs  metrics.rs  mod.rs  setup.rs  traces.rs
templates/common/examples/: helloworld.md
templates/cookbook/: README.md
templates/cookbook/Quickstarts/logs/http/: README.md  python.md
templates/go/otlp/: README.md
templates/js/otlp/: README.md
templates/rust/otlp/: README.md
tools/formatter/context/: open.py
